src/test/ui/impl-trait/in-ctfe/match-arm-exhaustive.stderr
error: constant pattern depends on a generic parameter
  --> $DIR/match-arm-exhaustive.rs:19:9
   |
LL |         CT => (),
   |         ^^

error: constant pattern depends on a generic parameter
  --> $DIR/match-arm-exhaustive.rs:19:9
   |
LL |         CT => (),
   |         ^^

error: aborting due to 2 previous errors

